# Chattergen

./: .gitignore  README.md  pyproject.toml  requirements.txt  s  sample.py  setup.py
chattergen/: app.py  utils.py
chattergen/helpers/: chat.py
